fixed spacing

--- a/style.css
+++ b/style.css
@@ -66,11 +66,11 @@ main {
 }
 
 .bio1 {
-  margin-left: 0em;
+  margin-left: 0em !important;
 }
 
 .bio4 { 
-  margin-right: 0em;
+  margin-right: 0em !important;
 }
 
 .video {
